<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNome"
        android:text="@string/tvNome"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="4dp"
        android:textAllCaps="true"
        android:background="#FFF"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff"
        android:padding="4dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/contentImgPanelinha" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#fff"
            android:padding="4dp"
            >

        <TextView
            android:id="@+id/txtPorcao"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textAllCaps="true"
            android:text="@string/tvPorcao" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fff"
                android:padding="4dp"
                >
                <TextView
                    android:id="@+id/txtTempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:text="@string/tvTempo"
                     />

                <TextView
                    android:id="@+id/txtTempoExt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvMinutos"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>